--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: news_app
-description: "A new Flutter project."
+description: "A simple News App build in Flutter"
 publish_to: 'none'
-version: 0.1.0
+version: 0.9.0
 
 environment:
   sdk: ^3.7.0
@@ -25,6 +25,8 @@ dev_dependencies:
   fluttertoast: ^8.2.2
   url_launcher: ^6.1.11
   connectivity_plus: ^4.0.1
+  flutter_launcher_icons: "^0.14.3"
+
 flutter:
   uses-material-design: true
   assets:
@@ -40,3 +42,10 @@ flutter_native_splash:
   android_12:
     image: assets/images/splash_logo.png
     icon_background_color: "#FFFFFF"
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/splash_logo.png"
+  min_sdk_android: 21 
